# eva-consciousness

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
docs/: ENVIRONMENTS.md  MAAT_MCP_INTEGRATION.md
scripts/: make-docs-pdf.py  setup-linux.sh  setup-mac.sh  setup-windows.ps1  verify-templates.mjs
src/: cli.ts  mcp-config.ts  prompts.ts  spawn.ts  template.ts  types.ts
templates/node/: .env.example  Dockerfile  package.json
templates/node/src/: eva-mcp-http.ts  eva-mcp.ts  eva-server.ts  index.ts  memory.ts
templates/python/: .env.example  eva_mcp.py  main.py  memory.py  pyproject.toml  test_eva_mcp.py  test_main.py  test_memory.py
templates/shared/: CLAUDE.md  TETHER.md  agents.md
templates/shared/journals/: README.md  _template.md
templates/shared/maat-mcp/: package-lock.json  package.json
templates/shared/maat-mcp/src/: index.ts
templates/shared/mcp/: README.md  filesystem.json  gcal.json  gmail.json  maat.json  memory.json  notion.json  omi.json  sequentialthinking.json  slack.json
templates/shared/notes/: README.md  keypoints.md
templates/shared/references/: README.md  links.md
templates/shared/tools/: README.md
tests/: mcp-config.test.ts  memory.test.ts  spawn.test.ts  template.test.ts
